# microgpu

./: .gitignore  .gitmodules  CMakeLists.txt  License.md  Readme.md  vcpkg.json
drivers/: Microgpu.sln
drivers/Glade2d/Glade2d.Microgpu/: ColorExtensions.cs  CompilerSupport.cs  Glade2d.Microgpu.csproj  Layer.cs  MicrogpuRenderer.cs  TextureManager.cs
drivers/Glade2d/Glade2d.Microgpu.Sample.Desktop/: Glade2d.Microgpu.Sample.Desktop.csproj  Program.cs
drivers/Glade2d/Glade2d.Microgpu.Sample.ProjectLab/: Glade2d.Microgpu.Sample.ProjectLab.csproj  MeadowApp.cs
drivers/Microgpu.Common/: ColorMode.cs  ColorRgb565.cs  CompilerSupport.cs  Font.cs  Gpu.cs  IColorType.cs  Microgpu.Common.csproj  PacketFramer.cs
drivers/Microgpu.Common.Tcp/: Microgpu.Common.Tcp.csproj  MicrogpuTcpClient.cs
drivers/Microgpu.Common.Tests/: Microgpu.Common.Tests.csproj  PacketFramerTests.cs
drivers/Microgpu.Common/Comms/: IGpuCommunication.cs  MeadowSpiGpuCommunication.cs  MeadowUartGpuCommunication.cs  TcpGpuCommunication.cs
drivers/Microgpu.Common/Operations/: AppendTexturePixelsOperation.cs  BatchOperation.cs  DefineTextureOperation.cs  DrawCharsOperation.cs  DrawRectangleOperation.cs  DrawTextureOperation.cs  DrawTriangleOperation.cs  GetLastMessageOperation.cs  GetStatusOperation.cs  IOperation.cs  InitializeOperation.cs  PresentFramebufferOperation.cs  ResetOperation.cs  SetTextureCountOperation.cs
drivers/Microgpu.Common/Responses/: IResponse.cs  LastMessageResponse.cs  ResponseType.cs  StatusResponse.cs
drivers/Microgpu.Meadow.Common/: Microgpu.Meadow.Common.csproj  SpiGpuInterface.cs
drivers/Microgpu.Meadow.Scratchpad/: MeadowApp.cs  Microgpu.Meadow.Scratchpad.csproj  Octahedron.cs  meadow.config.yaml
drivers/Microgpu.Sample.Common/: BouncingTexture.cs  Microgpu.Sample.Common.csproj  Octahedron.cs  SampleRunner.cs  TextureManager.cs
drivers/Microgpu.Sample.Common/Samples/: BouncingTexture.cs  FramerateDisplay.cs  Octahedron.cs
drivers/Microgpu.Scratchpad/: Microgpu.Scratchpad.csproj  Octahedron.cs  Program.cs
firmware/: CMakeLists.txt
firmware/microgpu-common/: CMakeLists.txt  alloc.h  color.h  color_rgb565.c  common.h  databus.h  display.h  framebuffer.c  framebuffer.h  list.c  list.h  messages.c  messages.h  operation_deserializer.c  operation_deserializer.h  operation_execution.c  operation_execution.h  operations.h  packet_framing.c  packet_framing.h  response_serializater.c  response_serializer.c  responses.h  texture_manager.c  texture_manager.h
firmware/microgpu-common/colors/: color.h  color_rgb565.c
firmware/microgpu-common/fonts/: defined_fonts.h  font_12x16.c  font_12x16.h  font_8x12.c  font_8x12.h  fonts.c  fonts.h
firmware/microgpu-common/operations/: batch.c  batch.h  get_last_message.c  get_last_message.h  operation_deserializer.c  operation_execution.c  operation_execution.h  operations.h  present_framebuffer.c  present_framebuffer.h  status.c  status.h  textures.c  textures.h
firmware/microgpu-common/operations/drawing/: rectangle.c  rectangle.h  triangle.c  triangle.h
firmware/microgpu-common/operations/execution/: batch.c  batch.h  fonts.c  fonts.h  get_last_message.h  present_framebuffer.c  status.c  status.h  textures.c  textures.h
firmware/microgpu-common/operations/execution/drawing/: rectangle.h  triangle.h
firmware/microgpu-common/responses/: response_serializer.c  responses.h
firmware/microgpu-esp32-fw/: CMakeLists.txt  sdkconfig.esp32s3_10a  sdkconfig.rgb_lcd_43_in_all_in_one  sdkconfig.rgb_lcd_7_in_all_in_one
firmware/microgpu-esp32-fw/main/: CMakeLists.txt  Kconfig.projbuild  benchmark_databus.c  benchmark_databus.h  common.h  main.c  spi_databus.c  spi_databus.h  test_databus.c  test_databus.h  uart_databus.c  uart_databus.h
firmware/microgpu-esp32-fw/main/displays/: i80_display.c  i80_display.h  rgb_lcd_display.c  rgb_lcd_display.h
firmware/microgpu-sdl-fw/: CMakeLists.tcp.txt  CMakeLists.test.txt  CMakeLists.txt  basic_databus.c  main.c  sdl_display.c  sdl_display.h  tcp_databus.c  tcp_databus.h  test_databus.c  vcpkg.json
hardware/esp32-s3 embedded/v1.0a/: BOM_PCB_Microgpu Esp32-s3 Embedded_2024-01-10.csv
microgpu-common/: CMakeLists.txt  Cargo.toml  alloc.h  color.c  color.h  color_rgb565.c  databus.h  display.h  framebuffer.c  framebuffer.h  messages.c  operation_deserializer.c  operation_execution.c  operation_execution.h  operations.c  operations.h  response_serializater.h  responses.h
microgpu-common/drawing/: rectangle.c  rectangle.h  triangle.c  triangle.h
microgpu-common/operations/: operations.h  present_framebuffer.h  reset.c  reset.h  status.h
microgpu-common/operations/drawing/: rectangle.c  rectangle.h  triangle.c  triangle.h
microgpu-common/src/: lib.rs
microgpu-pico-fw/: Cargo.toml
microgpu-pico-fw/.cargo/: config
microgpu-pico-fw/src/: main.rs
microgpu-sdl-fw/: CMakeLists.txt  basic_databus.c  basic_databus.h  display.c  display.h  input.c  input.h  main.c  null_databus.c  null_databus.h  sdl_display.c  sdl_display.h  tcp_databus.c  tcp_databus.h  vcpkg.json
microgpu_common/: Cargo.toml
microgpu_common/src/: lib.rs
microgpu_common/src/displays/: ili9341.rs  mod.rs
microgpu_esp32_fw/: Cargo.toml  diagram.json  wokwi.toml
microgpu_esp32_fw/.cargo/: config.toml
microgpu_esp32_fw/src/: main.rs
