[package]
name = "microgpu-pico-fw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
display-interface-spi = "0.4.1"
embedded-hal = "0.2.7"
embedded-graphics = "0.8.0"
fugit = "0.3"
mipidsi = "0.7"
panic-halt = "0.2"
rp-pico = "0.7"
